Use video on homepage and fix stlying

--- a/index.html
+++ b/index.html
@@ -30,10 +30,28 @@
          </div>
       </nav>
       <div class="home container-fluid" id="home">
-         <h1 class="home__title">Web Development Portfolio</h1>
-         <p class="home__text">Hey I'm Bill. <br/> Welcome to my web development portfolio.</p>
+        <video class="home-video" preload='auto' loop autoPlay poster="../imgs/bg1.jpg">
+          <source src='https://d1a3f4spazzrp4.cloudfront.net/clarity/bit_grip_bg.mp4' type='video/mp4' />
+        </video>
+        <header class="home-header">
+          <h1 class="home__title">Web Development Portfolio</h1>
+          <p class="home__text">Hey I'm Bill. <br/> Welcome to my web development portfolio.</p>
+        </header>
       </div>
       <div class="portfolio" id="portfolio">
+        <div class="container-fluid javascript-data-table image-wrapper">
+           <div class="text-box-left">
+              <h2>JavaScript Data Table</h2>
+              <span class="buttons-wrapper">
+                <a href="https://billdevcode.github.io/projects/javascript-data-table/index.html" target="_blank" class="buttons" role="button">
+                  See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </a>
+                <a href="https://github.com/billdevcode/javascript-data-table" target="_blank" class="buttons" role="button">
+                  See readme <i class="fa fa-code" aria-hidden="true"></i>
+                </a>
+              </span>
+           </div>
+        </div>
          <div class="container-fluid maps-locations image-wrapper">
             <div class="text-box-right">
                <h2>Google Places API</h2>
@@ -42,7 +60,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/maps-locations" target="_blank" class="buttons" role="button">
-                   See codes <i class="fa fa-code" aria-hidden="true"></i>
+                   See readme <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -55,7 +73,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/random-quotes" target="_blank" class="buttons" role="button">
-                   See codes <i class="fa fa-code" aria-hidden="true"></i>
+                   See readme <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -68,7 +86,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/javascript-calculator" target="_blank" class="buttons" role="button">
-                   See codes <i class="fa fa-code" aria-hidden="true"></i>
+                   See readme <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -81,7 +99,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/pomodoro-clock" target="_blank" class="buttons" role="button">
-                   See codes <i class="fa fa-code" aria-hidden="true"></i>
+                   See readme <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -94,7 +112,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/twitchTV" target="_blank" class="buttons" role="button">
-                   See codes <i class="fa fa-code" aria-hidden="true"></i>
+                   See readme <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -107,7 +125,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/fcc-leaderboard" target="_blank" class="buttons" role="button">
-                   See codes <i class="fa fa-code" aria-hidden="true"></i>
+                   See readme <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -120,7 +138,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/wikipedia-viewer" target="_blank" class="buttons" role="button">
-                   See codes <i class="fa fa-code" aria-hidden="true"></i>
+                   See readme <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -133,7 +151,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/tic-tac-toe" target="_blank" class="buttons" role="button">
-                   See codes <i class="fa fa-code" aria-hidden="true"></i>
+                   See readme <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -146,7 +164,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/simon-game" target="_blank" class="buttons" role="button">
-                   See codes <i class="fa fa-code" aria-hidden="true"></i>
+                   See readme <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
