Remove video poster

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          </div>
       </nav>
       <div class="home container-fluid" id="home">
-        <video class="home-video" preload='auto' loop autoPlay poster="../imgs/bg1.jpg">
+        <video class="home-video" preload='auto' loop autoPlay>
           <source src='https://d1a3f4spazzrp4.cloudfront.net/clarity/bit_grip_bg.mp4' type='video/mp4' />
         </video>
         <header class="home-header">
