Add new projects

--- a/index.html
+++ b/index.html
@@ -39,6 +39,32 @@
         </header>
       </div>
       <div class="portfolio" id="portfolio">
+        <div class="container-fluid github-followers image-wrapper">
+           <div class="text-box-left">
+              <h2>GitHub Followers (React)</h2>
+              <span class="buttons-wrapper">
+                <a href="https://github-followers-avatar.herokuapp.com/" target="_blank" class="buttons" role="button">
+                  See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </a>
+                <a href="https://github.com/billdevcode/github-followers" target="_blank" class="buttons" role="button">
+                  See code <i class="fa fa-code" aria-hidden="true"></i>
+                </a>
+              </span>
+           </div>
+        </div>
+        <div class="container-fluid hero-layout image-wrapper">
+           <div class="text-box-right">
+              <h2>Hero Layout (React)</h2>
+              <span class="buttons-wrapper">
+                <a href="https://hero-layout.herokuapp.com/" target="_blank" class="buttons" role="button">
+                  See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </a>
+                <a href="https://github.com/billdevcode/hero-layout" target="_blank" class="buttons" role="button">
+                  See code <i class="fa fa-code" aria-hidden="true"></i>
+                </a>
+              </span>
+           </div>
+        </div>
         <div class="container-fluid javascript-data-table image-wrapper">
            <div class="text-box-left">
               <h2>JavaScript Data Table</h2>
@@ -47,7 +73,7 @@
                   See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                 </a>
                 <a href="https://github.com/billdevcode/javascript-data-table" target="_blank" class="buttons" role="button">
-                  See readme <i class="fa fa-code" aria-hidden="true"></i>
+                  See code <i class="fa fa-code" aria-hidden="true"></i>
                 </a>
               </span>
            </div>
@@ -60,7 +86,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/maps-locations" target="_blank" class="buttons" role="button">
-                   See readme <i class="fa fa-code" aria-hidden="true"></i>
+                   See code <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -73,7 +99,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/random-quotes" target="_blank" class="buttons" role="button">
-                   See readme <i class="fa fa-code" aria-hidden="true"></i>
+                   See code <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -86,7 +112,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/javascript-calculator" target="_blank" class="buttons" role="button">
-                   See readme <i class="fa fa-code" aria-hidden="true"></i>
+                   See code <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -99,7 +125,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/pomodoro-clock" target="_blank" class="buttons" role="button">
-                   See readme <i class="fa fa-code" aria-hidden="true"></i>
+                   See code <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -112,7 +138,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/twitchTV" target="_blank" class="buttons" role="button">
-                   See readme <i class="fa fa-code" aria-hidden="true"></i>
+                   See code <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -125,7 +151,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/fcc-leaderboard" target="_blank" class="buttons" role="button">
-                   See readme <i class="fa fa-code" aria-hidden="true"></i>
+                   See code <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -138,7 +164,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/wikipedia-viewer" target="_blank" class="buttons" role="button">
-                   See readme <i class="fa fa-code" aria-hidden="true"></i>
+                   See code <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -151,7 +177,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/tic-tac-toe" target="_blank" class="buttons" role="button">
-                   See readme <i class="fa fa-code" aria-hidden="true"></i>
+                   See code <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
@@ -164,7 +190,7 @@
                    See it live <i class="fa fa-chevron-right" aria-hidden="true"></i>
                  </a>
                  <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/simon-game" target="_blank" class="buttons" role="button">
-                   See readme <i class="fa fa-code" aria-hidden="true"></i>
+                   See code <i class="fa fa-code" aria-hidden="true"></i>
                  </a>
                </span>
             </div>
