--- a/projects/maps-locations/index.html
+++ b/projects/maps-locations/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Using Google Places API</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="src/stylesheet.css">
-</head>
-<body>
-  <div class="search-container">
-    <h1>Hey there! <br> What would you like to search for today?</h1>
-    <input id="search-query" type="text" name="search-query" placeholder="" autofocus><br>
-    <input class="search-button main-button" type="submit" value="Search">
-  </div>
-
-  <div class="sidenav">
-    <a href="javascript:void(0)" id="close-nav">&times;</a>
-    <div class="sidenav-container">
-      <input id="sidenav-query" type="text" placeholder=""><br>
-      <input class="search-button sidenav-button" type="submit" value="Search">
+  <head>
+    <title>Google Places API</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <link rel="prefetch" href="https://fonts.googleapis.com/css?family=Dosis" as="font">
+    <link rel="stylesheet" href="src/stylesheet.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.ui.min.js"></script>    
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnaEYi_QuPmmF-_4xRQKKKx4pqwGahl4U&libraries=places" async></script>
+    <script type="text/javascript" src="src/app.js" async></script>
+  </head>
+  <body>
+    <div class="search-container">
+      <header>
+        <h1>Hey there! <br> What would you like to search for today?</h1>
+      </header>
+      <input id="search-query" type="text" name="search-query" placeholder="restaurants, pizza, McDonald's..." autofocus><br>
+      <input class="search-button main-button" type="submit" value="Search">
     </div>
-    <ul class="results-list"></ul>
-  </div>
 
-  <div id="map"></div>
+    <aside class="sidenav">
+      <a href="javascript:void(0)" id="close-nav">&times;</a>
+      <div class="sidenav-container">
+        <input id="sidenav-query" type="text" placeholder=""><br>
+        <input class="search-button sidenav-button" type="submit" value="Search">
+      </div>
+      <ul class="results-list"></ul>
+    </aside>
 
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAytr024G7F4gULgAW1eMTtExZjaFwJuzE&libraries=places"></script>
-  <script type="text/javascript" src="src/app.js"></script>
-</body>
+    <main id="map"></main>
+  </body>
 </html>
